type verification is developed

--- a/programming_project/source copy/driven_oscill.ipynb
+++ b/programming_project/source copy/driven_oscill.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -36,15 +36,15 @@
     }
    ],
    "source": [
-    "cmd = [f'g++ -o ./bin/generic test_generic_euler.cpp']\n",
-    "p = subprocess.Popen(cmd, shell=True, stdout=subprocess.PIPE, stderr=subprocess.PIPE)\n",
-    "cout, cerr = p.communicate()\n",
-    "print(cout.decode(), cerr.decode())"
+    "cmd = [f'g++ -o ./bin/generic test_generic_euler.cpp'] #comand\n",
+    "p = subprocess.Popen(cmd, shell=True, stdout=subprocess.PIPE, stderr=subprocess.PIPE) #create process\n",
+    "cout, cerr = p.communicate() #wait\n",
+    "print(cout.decode(), cerr.decode()) #decode"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,14 +71,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "b'895\\n' b''\n"
+      "b'' b''\n"
      ]
     }
    ],
